--- a/mason/lighttpd.service
+++ b/mason/lighttpd.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 User=root
-ExecStart=/usr/sbin/httpd -f -p 80 -h /srv/mason
+ExecStart=/usr/sbin/lighttpd -D -f /etc/lighttpd.conf
 
 [Install]
 WantedBy=multi-user.target
