frontend: Rearrange haproxy.cfg and fix a warning

--- a/frontend/haproxy.cfg
+++ b/frontend/haproxy.cfg
@@ -1,5 +1,9 @@
 # HAProxy configuration for Baserock Project front-end proxy.
 
+# See <https://cbonte.github.io/haproxy-dconv/configuration-1.5.html#7>
+# for more documentation than you ever dreamed of.
+
+
 global
     maxconn 4000
 
@@ -20,25 +24,19 @@ defaults
     log global
     option httplog
 
+
 frontend http-in
     bind *:80
 
-    # Rules below here implement the URL-based forwarding to the
-    # appropriate instance. The hdr(host) call means 'extract the
-    # first Host header from the HTTP request or response', the '-m beg'
-    # switch means 'match against the beginning of it' and the '-i' flag
-    # makes the match case-insensitive.
-    #
-    # See <https://cbonte.github.io/haproxy-dconv/configuration-1.5.html#7>
-    # for more documentation than you ever dreamed of.
-
+    # The hdr(host) call means 'extract the first Host header from the HTTP request
+    # or response', the '-m beg' switch means 'match against the beginning of it'
+    # and the '-i' flag makes the match case-insensitive.
     acl host_gerrit hdr(host) -m beg -i gerrit
-    use_backend baserock_gerrit_http if host_gerrit
-
     acl host_mason_x86_32 hdr(host) -m beg -i mason-x86-32
-    use_backend baserock_mason_x86_32_http if host_mason_x86_32
-
     acl host_openid hdr(host) -m beg -i openid
+
+    use_backend baserock_gerrit_http if host_gerrit
+    use_backend baserock_mason_x86_32_http if host_mason_x86_32
     use_backend baserock_openid_provider_http if host_openid
 
 frontend ssh-in:
@@ -49,10 +47,11 @@ frontend ssh-in:
     # For this reason it's probably worth pointing gerrit.baserock.org to
     # a different floating IP that serves only the gerrit instance.
     mode tcp
+    option tcplog
+
     bind *:29418
     default_backend baserock_gerrit_ssh
 
-# Entries here locate each server backend.
 
 backend baserock_gerrit_http
     server baserock_gerrit 192.168.222.69:8080
@@ -62,7 +61,7 @@ backend baserock_gerrit_ssh
     server baserock_gerrit 192.168.222.69:29418
 
 backend baserock_mason_x86_32_http
-    server baserock_mason_x86_32 192.168.222.78
+    server baserock_mason_x86_32 192.168.222.78:80
 
 backend baserock_openid_provider_http
-    server baserock_openid_provider 192.168.222.67
+    server baserock_openid_provider 192.168.222.67:80
