Avoid using Packer for database deployment
Also, add some info to the README about restoring the database from
a backup of the /var/lib/mysql volume.

Change-Id: I2907e3bc01fdcb7adbc0cccfa47bc662d96dd264

--- a/baserock_database/image-config.yml
+++ b/baserock_database/image-config.yml
@@ -1,10 +1,10 @@
 # System configuration for Baserock database server.
 #
-# Packer runs this playbook inside the system at 'build' time, using the
-# command `sudo ansible-playbook`.
+# This Ansible playbook expects to be run on a Fedora 21 Cloud image.
 ---
-- hosts: localhost
+- hosts: database-mariadb
   gather_facts: False
+  sudo: True
   tasks:
   - name: enable persistant journal
     shell: mkdir /var/log/journal
@@ -20,3 +20,12 @@
         - mariadb
         - mariadb-server
         - MySQL-python
+
+  - name: install libselinux-python, so Ansible can control selinux
+    yum: name=libselinux-python state=latest
+
+  - name: disable SELinux on subsequent boots
+    selinux: state=disabled
+
+  - name: disable SELinux on current boot
+    command: setenforce 0
