mason: Make some configuration parameters optional in mason.conf
They are optional for deployments that use mason.configure already, but
if you want to add the /etc/mason/mason.conf file post-deployment, you
need the defaults to be defined in the Ansible script instead of the
.configure extension.

Change-Id: If460fa35cf74f62424ec4759c49ce3be67669d18

--- a/mason/turbo-hipster.service
+++ b/mason/turbo-hipster.service
@@ -4,7 +4,7 @@ After=zuul-server.service
 
 [Service]
 User=root
-ExecStart=/bin/sh -c ". /etc/os.conf && /usr/bin/turbo-hipster -c /etc/turbo-hipster-config.yaml"
+ExecStart={{ TURBO_HIPSTER_COMMAND_PREFIX | default() }} /usr/bin/turbo-hipster -c /etc/turbo-hipster-config.yaml"
 
 [Install]
 WantedBy=multi-user.target
