Move Zuul configuration to the location Zuul expects it to be
Zuul expects its configuration to be in /etc/zuul/zuul.conf, if it lives
in /etc/zuul.conf then I have to pass `-c /etc/zuul.conf` to the
commandline tool each time I run it, which is annoying.

--- a/mason/ansible/mason-setup.yml
+++ b/mason/ansible/mason-setup.yml
@@ -86,11 +86,11 @@
   - name: Create required configuration files
     template: src=/usr/share/mason-setup/{{ item }} dest=/etc/{{ item }}
     with_items:
-    - zuul.conf
+    - zuul/zuul.conf
     - turbo-hipster-config.yaml
     - lighttpd.conf
     - zuul-layout.yaml
-    - zuul-logging.conf
+    - zuul/zuul-logging.conf
 
   - name: Create the OpenStack credentials file
     template: src=/usr/share/mason-setup/{{ item }} dest=/etc/{{ item }}
