--- a/mason/share/zuul/zuul.conf
+++ b/mason/share/zuul/zuul.conf
@@ -13,7 +13,8 @@ user={{ GERRIT_USER }}
 sshkey={{ GERRIT_SSH_KEY_PATH }}
 
 [zuul]
-log_config=/etc/zuul-logging.conf
+layout_config=/etc/zuul/layout.yaml
+log_config=/etc/zuul/logging.conf
 pidfile=/var/run/zuul/zuul.pid
 state_dir=/var/lib/zuul
 git_dir=/var/lib/zuul/git
