--- a/mason/share/zuul-layout.yaml
+++ b/mason/share/zuul-layout.yaml
@@ -11,6 +11,13 @@ pipelines:
       gerrit:
         verified: -1
 
+  - name: post-commit
+    manager: IndependentPipelineManager
+    trigger:
+      gerrit:
+        event: ref-updated
+        ref: master
+
 jobs:
   - name: ^.*-merge$
     failure-message: Unable to merge change, please rebase and try again.
@@ -20,3 +27,10 @@ projects:
     check:
       - build:
         - build_test
+    post:
+      - build:
+        - build_test
+
+  - name: baserock/baserock/morph
+    post-commit:
+      - foobar
