Avoid using Packer for the frontend system
Also, move it into baserock_frontend so it is clearly differentiated
from the upstream definitions.git stuff.

It's now based off Fedora 21 instead of Fedora 20.

This is now deployed at baserock.org.

Change-Id: Icaabc84f9513d08479d8d22c19e8b632ac5108b5

--- a/baserock_frontend/instance-config.yml
+++ b/baserock_frontend/instance-config.yml
@@ -7,12 +7,12 @@
   gather_facts: false
   sudo: yes
   tasks:
-  - name: ensure system up to date
-    yum: name=* state=latest
-
   # To create the .pem file, simply concatenate
   # certs/baserock.org-ssl-certificate-temporary-dsilverstone.full.cert with
   # the private key for that certificate (which is not committed to Git, of
   # course).
   - name: install SSL certificate
-    copy: src=../private/baserock.org-ssl-certificate-temporary-dsilverstone.pem owner=haproxy mode=400
+    copy: src=../private/baserock.org-ssl-certificate-temporary-dsilverstone.pem dest=/etc/pki/tls/private/baserock.pem owner=haproxy mode=400
+
+  - name: HAProxy configuration
+    copy: src=haproxy.cfg dest=/etc/haproxy/haproxy.cfg
