baserock_storyboard: Add baserock/lorry to list of projects
Change-Id: I39afa2bd88e8b6c0300de7efbd9fe11e8b7b7105

--- a/baserock_storyboard/projects.yaml
+++ b/baserock_storyboard/projects.yaml
@@ -22,6 +22,10 @@
   description: Baserock Import Tool
   use-storyboard: true
 
+- project: baserock/lorry
+  description: Lorry mirroring tool
+  use-storyboard: true
+
 - project: baserock/morph
   description: Morph build tool
   use-storyboard: true
