baserock_gerrit: Update gerrit.config for 2.11.4

--- a/baserock_gerrit/gerrit.config
+++ b/baserock_gerrit/gerrit.config
@@ -47,3 +47,6 @@
 # administration of Gerrit plugins, so we can't really avoid it.
 [plugins]
 	allowRemoteAdmin = true
+[container]
+    user = gerrit
+    javaHome = {{ JRE_DIR }}/jre
