baserock_frontend: Add configuration for download.baserock.org
Change-Id: I06e0191d072fc6561da00047e69ce6c3e20ea8cb

--- a/baserock_frontend/haproxy.cfg
+++ b/baserock_frontend/haproxy.cfg
@@ -62,6 +62,9 @@ frontend https-in
     acl host_mason_x86_64 hdr(host) -m beg -i mason-x86-64
     use_backend baserock_mason_x86_64_http if host_mason_x86_64
 
+    acl host_download hdr(host) -m beg -i download
+    use_backend baserock_webserver_http if host_download
+
     use_backend baserock_openid_provider_http if { hdr(host) -m beg -i openid }
 
 frontend ssh-in:
@@ -95,3 +98,6 @@ backend baserock_mason_x86_64_http
 
 backend baserock_openid_provider_http
     server baserock_openid_provider 192.168.222.67:80
+
+backend baserock_webserver_http
+    server baserock_webserver 192.168.222.127:80
