--- a/baserock_database/instance-config.yml
+++ b/baserock_database/instance-config.yml
@@ -6,18 +6,10 @@
   gather_facts: False
   sudo: yes
   tasks:
-    - name: ensure system up to date
-      yum: name=* state=latest
-
-    # FIXME: the create-data-volume.yml role should handle this... the gotcha
-    # is that this won't work in Baserock systems right now. Once there's an
-    # lvm2-lvmetad.service in Baserock we can move this entry to
-    # create-data-volume.yml.
-    - name: ensure LVM metadata service is running
-      service: name=lvm2-lvmetad enabled=yes state=started
-
     - include: ../tasks/create-data-volume.yml lv_name=database lv_size=25g mountpoint=/var/lib/mysql
 
     - name: ensure mysql user owns /var/lib/mysql
       file: path=/var/lib/mysql owner=mysql group=mysql mode=600 state=directory
 
+    - name: start MariaDB service
+      service: name=mariadb state=started
