Fix backup configuration
The frontend's internal IP has changed due to redeployment, so we need
to update the whitelisted IP. Also, Fedora 23 doesn't contain the
Python 2 version of PyYAML which the backup-snapshot script requires.
It would be good to just require Python3 for backup-snapshot, but I
don't have time to fix up all the issues with that right now.

Change-Id: Ica6302ff288255870511f1c19ec61c324dcd4288

--- a/baserock_database/instance-backup-config.yml
+++ b/baserock_database/instance-backup-config.yml
@@ -4,8 +4,11 @@
   gather_facts: false
   sudo: yes
   vars:
-    FRONTEND_IP: 192.168.222.116
+    FRONTEND_IP: 192.168.222.143
   tasks:
+    - name: pyyaml for Python 2
+      dnf: PyYAML state=latest
+
     - name: backup-snapshot script
       copy: src=../backup-snapshot dest=/usr/bin/backup-snapshot mode=755
 
