Add irclogs for #automotive in freenode
Change-Id: Id5c5c73b3347cf47396a1e5e00f474726fa89fa4

--- a/baserock_irclogs/files/baserock.conf
+++ b/baserock_irclogs/files/baserock.conf
@@ -5,7 +5,7 @@ supybot.user:
 supybot.networks: freenode
 supybot.networks.freenode.password: 
 supybot.networks.freenode.servers: irc.freenode.com:6667
-supybot.networks.freenode.channels: #baserock
+supybot.networks.freenode.channels: #automotive #baserock
 supybot.networks.freenode.channels.key: 
 supybot.networks.freenode.ssl: False
 supybot.reply.format.time: %I:%M %p, %B %d, %Y
