baserock_openid: Install ntp to make sure the clock is set correctly
Before this, we were having problems to authenticate with Gerrit. Gerrit clock
was set correctly, but OpenId one wasn't.

Gerrit service was complaining with:

    "ERROR com.google.gerrit.httpd.auth.openid.OpenIdServiceImpl : OpenID failure: Nonce verification failed.  Likely caused by clock skew on this server, install/configure NTP.

Change-Id: I391091df5afeb564411d141981ae1608a8ce6ab3

--- a/baserock_openid_provider/image-config.yml
+++ b/baserock_openid_provider/image-config.yml
@@ -1,6 +1,4 @@
 # Image configuration for Baserock OpenID provider.
-#
-# This playbook is run at image-creation time by Packer.
 ---
 - hosts: openid
   gather_facts: False
@@ -29,6 +27,10 @@
 
   - name: install PyYAML
     dnf: name=PyYAML state=latest
+
+  # Authentication in Gerrit fails if OpenID clock is not set correctly
+  - name: Install ntp
+    dnf: name=ntp
 
   # All this stuff is installed with Pip, which isn't really necessary except
   # for django-registration-redux. Fedora packages django-registration but not
