mason: Use again 'git.baserock.org' as TROVE_HOST
This way we ensure Mason links will point to the commits using an accesible
URL.
Create an entry in /etc/hosts for 'git.baserock.org' to ensure the internal IP
is used, which is the only way to access the Trove from Mason in Baserock
infra.

Change-Id: Ic37a79a968f649d00fe7102e31cff7aec89ca811

--- a/baserock_mason_x86_64/distbuild.conf
+++ b/baserock_mason_x86_64/distbuild.conf
@@ -11,8 +11,7 @@ ARTIFACT_CACHE_SERVER: 192.168.222.14
 DISTBUILD_CONTROLLER: true
 DISTBUILD_WORKER: true
 
-# This is the IP of git.baserock.org.
-TROVE_HOST: 192.168.222.58
+TROVE_HOST: git.baserock.org
 TROVE_ID: baserock
 WORKERS: mason-x86-64
 
