--- a/baserock_mason_x86_64/mason.conf
+++ b/baserock_mason_x86_64/mason.conf
@@ -11,8 +11,7 @@ MASON_DEFINITIONS_REF: master
 MASON_DISTBUILD_ARCH: x86_64
 MASON_TEST_HOST: None
 
-# This is the IP of git.baserock.org.
-TROVE_HOST: 192.168.222.58
+TROVE_HOST: git.baserock.org
 TROVE_ID: baserock
 
 CONTROLLERHOST: mason-x86-64
