Add new 'spec' project
Change-Id: Iba591a6cc47e825b4c35247033906ab6e44b9054

--- a/baserock_storyboard/projects.yaml
+++ b/baserock_storyboard/projects.yaml
@@ -34,6 +34,10 @@
   description: baserock.org infrastructure
   use-storyboard: true
 
+- project: baserock/spec
+  description: Specification for Baserock definitions format
+  use-storyboard: true
+
 - project: baserock/wiki
   description: Baserock Wiki at http://wiki.baserock.org/
   use-storyboard: true
