baserock_frontend: Increase timeout for Gerrit SSH connections to 1 hour
The `gerrit stream-events` command requires a long-lived SSH connection,
it's annoying to have to reconnect every minute.

I'd be happy to increase timeout further, although it cannot be
infinite.

Change-Id: I9398f6feaf8585ac1bdb6f7cd828518cdc3ea291

--- a/baserock_frontend/haproxy.cfg
+++ b/baserock_frontend/haproxy.cfg
@@ -83,6 +83,10 @@ frontend ssh-in:
     bind *:29418
     default_backend baserock_gerrit_ssh
 
+    # It's very annoying for 'gerrit stream-events' to have disconnection
+    # after 50 seconds!
+    timeout client 1h
+
 # Entries here locate each server backend.
 
 backend baserock_gerrit_http
@@ -91,6 +95,10 @@ backend baserock_gerrit_http
 backend baserock_gerrit_ssh
     mode tcp
     server baserock_gerrit 192.168.222.69:29418
+
+    # It's very annoying for 'gerrit stream-events' to have disconnection
+    # after 50 seconds!
+    timeout server 1h
 
 backend baserock_irclogs_http
     server baserock_irclogs 192.168.222.74:80
