Add docs.baserock.org, which renders spec.git as HTML and serves it
Change-Id: I99ab72ad50d43da58c867b6d3ccd972b8e3e4bab

--- a/baserock_frontend/haproxy.cfg
+++ b/baserock_frontend/haproxy.cfg
@@ -67,6 +67,9 @@ frontend https-in
     acl host_download hdr(host) -m beg -i download
     use_backend baserock_webserver_http if host_download
 
+    acl host_docs hdr(host) -m beg -i docs
+    use_backend baserock_webserver_http if host_docs
+
     use_backend baserock_openid_provider_http if { hdr(host) -m beg -i openid }
 
 frontend ssh-in:
