--- a/baserock_webserver/etc/cherokee/cherokee.conf
+++ b/baserock_webserver/etc/cherokee/cherokee.conf
@@ -61,6 +61,19 @@ vserver!2!rule!1!handler!rewrite!10!regex = ^.*$
 vserver!2!rule!1!handler!rewrite!10!show = 1
 vserver!2!rule!1!handler!rewrite!10!substring = /baserock/
 vserver!2!rule!1!match = default
+vserver!3!directory_index = index.html
+vserver!3!document_root = /srv/docs.baserock.org
+vserver!3!nick = docs.baserock.org
+vserver!3!rule!3!document_root = /usr/share/cherokee/themes
+vserver!3!rule!3!handler = file
+vserver!3!rule!3!match = directory
+vserver!3!rule!3!match!directory = /cherokee_themes
+vserver!3!rule!2!document_root = /usr/share/cherokee/icons
+vserver!3!rule!2!handler = file
+vserver!3!rule!2!match = directory
+vserver!3!rule!2!match!directory = /cherokee_icons
+vserver!3!rule!1!handler = common
+vserver!3!rule!1!match = default
 icons!default = page_white.png
 icons!directory = folder.png
 icons!file!bomb.png = core
