baserock_storyboard: Add Lorry Controller project
Change-Id: Ife5cc630cc588948a38b0a4efed8df8ef56a201a

--- a/baserock_storyboard/projects.yaml
+++ b/baserock_storyboard/projects.yaml
@@ -26,6 +26,10 @@
   description: Lorry mirroring tool
   use-storyboard: true
 
+- project: baserock/lorry-controller
+  description: Lorry Controller scheduling and management tool
+  use-storyboard: true
+
 - project: baserock/morph
   description: Morph build tool
   use-storyboard: true
