Install opengrok.baserock.org
Using baserock-export scripts, OpenGrok sytem will
export all the sources needed for a Baserock minimal system
and will use them.

Change-Id: Ia1e5196b15d6bb8af005f0ea8cf317182db51134

--- a/baserock_frontend/haproxy.cfg
+++ b/baserock_frontend/haproxy.cfg
@@ -70,6 +70,9 @@ frontend https-in
     acl host_docs hdr(host) -m beg -i docs
     use_backend baserock_webserver_http if host_docs
 
+    acl host_opengrok hdr(host) -m beg -i opengrok
+    use_backend baserock_opengrok_http if host_opengrok
+
     use_backend baserock_openid_provider_http if { hdr(host) -m beg -i openid }
 
 frontend ssh-in:
@@ -114,3 +117,6 @@ backend baserock_openid_provider_http
 
 backend baserock_webserver_http
     server baserock_webserver 192.168.222.127:80
+
+backend baserock_opengrok_http
+    server baserock_opengrok 192.168.222.149:8080
